<resources>
    <string name="app_name">StudentManager</string>
    <string name="card_student_list">Show all Students in System</string>
    <string name="card_class_list">Show all Classes in System</string>
    <string name="card_assignment_list">Show all Assignments in System</string>
    <string name="card_exam_list">Show all Exams in System</string>
    <string name="checkoff_dialog_tv_1">Please Choose an Assignment</string>
    <string name="checkoff_dialog_tv_2">Please Choose a Student</string>
    <string name="checkoff_dialog_tv_3">Please Enter the Student Rate.</string>
    <string name="checkoff_dialog_tv_0_exam">Please Choose a class.</string>
    <string name="checkoff_dialog_tv_1_exam">Please Choose an Exam</string>
    <string name="checkoff_dialog_tv_2_exam">Please Choose a Student</string>
    <string name="checkoff_dialog_tv_3_exam">Please Enter the Student Rate.</string>
    <string name="checkoff_dialog_bt_1">Submit</string>
    <string name="checkoff_dialog_bt_2">Cancel</string>
    <string name="assignment_list_title">Assignment List</string>
    <string name="assignment_list_button">Check an assignment off</string>
    <string name="exam_list_title">Exam List</string>
    <string name="student_list_title">Student List</string>
    <string name="class_list_title">Class List</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_assignment_name">Assignment Name : </string>
    <string name="text_class_name">Class Name :</string>
    <string name="text_description">Description : </string>
    <string name="text_due_date">DueDate : </string>
    <string name="text_name">Name : </string>
    <string name="text_first_name">First Name : </string>
    <string name="text_last_name">Last Name : </string>
    <string name="text_email">Email Address : </string>
    <string name="text_phone">Phone Number : </string>
    <string name="text_address">Home Address : </string>
    <string name="text_date">Date : </string>
    <string name="student_assignment_list_title">Assignments</string>
    <string name="student_exam_list_title">Exams</string>
    <string name="student_class_list_title">Classes</string>
    <string name="student_note_title">Note</string>
    <string name="hint_class_name">Enter Class\'s Name</string>
    <string name="hint_class_description">Enter Class\'s Description</string>
    <string name="hint_assignment_name">Enter Assignment\'s Name</string>
    <string name="hint_assignment_description">Enter Assignment\'s Description</string>
    <string name="hint_assignment_due_date">Enter Assignment\'s DueDate</string>
    <string name="hint_exam_name">Enter Exam\'s Name</string>
    <string name="hint_exam_date">Enter Exam\'s Date</string>
    <string name="hint_student_name">Enter Student\'s Name</string>
    <string name="hint_student_family_name">Enter Student\'s Family Name</string>
    <string name="hint_student_email">Enter Student\'s Email</string>
    <string name="hint_student_phone">Enter Student\'s Phone Number</string>
    <string name="hint_student_address">Enter Student\'s Address</string>
    <string name="error_incomplete_operation">Error ! All Fields must be complete.Please check your input and try again.</string>
    <string name="class_activity_title">Class Management</string>
    <string name="default_student_location">Student/location/street</string>
    <string name="default_student_phone">+201000000000</string>
    <string name="default_student_email">StudenEmail@gmail.com</string>
    <string name="student_profile_remove_button">Remove Student</string>
    <string name="student_profile_add_note_button">Add Note</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_add">Add</string>
    <string name="bt_add_class_text">Add Class</string>
    <string name="add_student_text">Add Class to Student</string>
</resources>
