<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/custom_dialog_layout_design_user_input"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/default_parent_view_padding">

    <TextView
        android:id="@+id/assignNameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_assignment_name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/assignNameDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_assignment_name"
        />

    <TextView
        android:id="@+id/assignDescriptionTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_description"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:scrollHorizontally="false"
        android:id="@+id/descriptionDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_assignment_description"
        android:inputType="textMultiLine" />


    <TextView
        android:id="@+id/assignDueDateTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_due_date"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/assignDueDateDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_assignment_due_date"
        android:inputType="date" />

</LinearLayout>