<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/custom_dialog_layout_design_user_input"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/default_parent_view_padding">

    <TextView
        android:id="@+id/examNameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:scrollHorizontally="false"
        android:id="@+id/examNameDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_exam_name"
        android:inputType="text" />

    <TextView
        android:id="@+id/examDateTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_date"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/examDateDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_exam_date"
        android:inputType="date" />
</LinearLayout>