<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/default_parent_view_padding">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_view_margin"
        android:text="@string/checkoff_dialog_tv_0_exam"
        android:textSize="@dimen/default_subtitle_text_size" />

    <Spinner
        android:id="@+id/sp_classes"
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_spinner_height"
        android:layout_margin="@dimen/small_view_margin" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_view_margin"
        android:text="@string/checkoff_dialog_tv_1_exam"
        android:textSize="@dimen/default_subtitle_text_size" />

    <Spinner
        android:id="@+id/sp_exams"
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_spinner_height"
        android:layout_margin="@dimen/default_view_margin" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkoff_dialog_tv_2_exam"
        android:textSize="@dimen/default_subtitle_text_size"
        android:layout_margin="@dimen/default_view_margin"/>

    <Spinner
        android:id="@+id/sp_students_exam"
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_spinner_height"
        android:layout_margin="@dimen/small_view_margin" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkoff_dialog_tv_3_exam"
        android:textSize="@dimen/default_subtitle_text_size"
        android:layout_margin="@dimen/small_view_margin"/>

    <Spinner
        android:id="@+id/sp_grades"
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_spinner_height"
        android:layout_margin="@dimen/small_view_margin"
        />



</LinearLayout>