<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkoff_dialog_tv_1"
        android:textSize="18sp"
        android:layout_margin="5dp"/>
    <Spinner
        android:id="@+id/sp_assignments"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="5dp"></Spinner>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkoff_dialog_tv_2"
        android:textSize="18sp"
        android:layout_margin="5dp"/>

    <Spinner
        android:id="@+id/sp_students"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="5dp"></Spinner>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkoff_dialog_tv_3"
        android:textSize="18sp"
        android:layout_margin="5dp"/>

    <RatingBar
        android:id="@+id/rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_gravity="center"
        style="?android:attr/ratingBarStyle"
        android:numStars="5"
        android:stepSize="0.1"
        android:isIndicator="true" />
    <TextView
        android:id="@+id/textView"
        android:layout_width="178dp"
        android:layout_height="54dp"
        android:text="TextView" />




</LinearLayout>
