<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/default_parent_view_padding">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkoff_dialog_tv_1"
        android:textSize="@dimen/default_subtitle_text_size"
        android:layout_margin="@dimen/default_view_margin"/>

    <Spinner
        android:id="@+id/sp_assignments"
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_spinner_height"
        android:layout_margin="@dimen/default_view_margin"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkoff_dialog_tv_2"
        android:textSize="@dimen/default_subtitle_text_size"
        android:layout_margin="@dimen/default_view_margin"/>

    <Spinner
        android:id="@+id/sp_students"
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_spinner_height"
        android:layout_margin="@dimen/default_view_margin"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkoff_dialog_tv_3"
        android:textSize="@dimen/default_subtitle_text_size"
        android:layout_margin="@dimen/default_view_margin"/>

    <RatingBar
        android:id="@+id/rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_view_margin"
        android:layout_gravity="center"
        style="?android:attr/ratingBarStyle"
        android:numStars="5"
        android:stepSize="0.1"
        android:isIndicator="true" />



</LinearLayout>