<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/circular_toolbar"
            android:fadingEdge="vertical"
            android:minHeight="?attr/actionBarSize">

            <TextView
                android:id="@+id/toolbar_title"
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/app_name"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />
        </android.support.v7.widget.Toolbar>

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/cv_student_list"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:layout_margin="5dp"
            card_view:cardCornerRadius="10dp"
            card_view:cardElevation="@dimen/card_view_elevation"
            card_view:cardUseCompatPadding="true"
            android:clickable="true"
            android:focusable="true"
            android:onClick="showStudentlist">

            <ImageView
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:src="@drawable/ic_students" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom |center_horizontal"
                android:layout_margin="10dp"
                android:text="@string/card_student_list"
                android:textSize="@dimen/card_text_size"
                android:textStyle="bold" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/cv_class_list"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:layout_margin="5dp"
            card_view:cardCornerRadius="10dp"
            card_view:cardElevation="@dimen/card_view_elevation"
            card_view:cardUseCompatPadding="true"
            android:clickable="true"
            android:focusable="true"
            android:onClick="showClassList">

            <ImageView
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:src="@drawable/ic_class" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom |center_horizontal"
                android:layout_margin="10dp"
                android:text="@string/card_class_list"
                android:textSize="@dimen/card_text_size"
                android:textStyle="bold" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/cv_assignment_list"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:layout_margin="5dp"
            card_view:cardCornerRadius="10dp"
            card_view:cardElevation="@dimen/card_view_elevation"
            card_view:cardPreventCornerOverlap="true"
            card_view:cardUseCompatPadding="true"
            android:clickable="true"
            android:focusable="true"
            android:onClick="showAssignmentList">

            <ImageView
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:src="@drawable/assignment" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom |center_horizontal"
                android:layout_margin="10dp"
                android:text="@string/card_assignment_list"
                android:textSize="@dimen/card_text_size"
                android:textStyle="bold" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/cv_exam_list"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:layout_margin="5dp"
            card_view:cardCornerRadius="10dp"
            card_view:cardElevation="@dimen/card_view_elevation"
            card_view:cardPreventCornerOverlap="true"
            card_view:cardUseCompatPadding="true"
            android:clickable="true"
            android:focusable="true"
            android:onClick="showExamList">

            <ImageView
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:src="@drawable/exam" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom |center_horizontal"
                android:layout_margin="10dp"
                android:text="@string/card_exam_list"
                android:textSize="@dimen/card_text_size"
                android:textStyle="bold" />

        </android.support.v7.widget.CardView>


    </LinearLayout>
</ScrollView>